--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,7 +34,11 @@ body{
 	background-image: url(../images/bg.png);
 }
 
-
+.wrapper{
+	
+	position: relative;
+	overflow:hidden;
+}
 
 .container{
 
@@ -51,21 +55,22 @@ body{
 		
 		position: relative;
 		margin: 0 auto;
-		display: none;//temporary
+		
 
 		&-santa{
 
-			width: 760px;
-			position: absolute;
-			left: -245px;
-    		top: -450px;
+			width: 400px;
+		    position: absolute;
+		    left: -80px;
+		    top: -180px;
 		    transform: rotate(-45deg);
+		    
 		    
 		}
 
 		&-merry-xmas{
 
-			width: 1000px;
+			width: 450px;
 			@include margin-custom(105px, auto, 0, auto);
 		}
 	}
@@ -255,7 +260,7 @@ body{
 
 	@include font($font-family-main, $font-weight-main,$gray-lighter);
 	font-size: 20px;
-	
+	width: 400px;
 	border:none;
 	background: transparent;
 	display: block;
@@ -276,9 +281,9 @@ body{
 
 		border-radius: 50%;
 		cursor: default;
-		height:40px;
+		height:57px;
 		@include margin-vertical(0, 10px);
-		font-size: 12px;
+		font-size: 18px;
 		
 
 		&.-selected-,
@@ -337,7 +342,7 @@ body{
 		&-name{
 
 			color: $gray-lighter;
-			font-size: 12px;
+			font-size: 18px;
 			-webkit-flex: none;
 		    -ms-flex: none;
 		    -webkit-box-flex: none;
@@ -493,6 +498,8 @@ body{
 		background-color: $brand-primary;
 		@include padding-vertical(15px,0);
 		
+		
+		
 		&-holder{
 
 			position: relative;
@@ -516,8 +523,6 @@ body{
 			&:hover,
 			&:focus{
 				
-				
-				
 				+.clock__analog-hour{
 					opacity:1;
 					
@@ -525,6 +530,7 @@ body{
 						opacity:1;
 					}
 				}
+		
 			}
 			
 		}
@@ -544,6 +550,7 @@ body{
 			border-radius:4px 0 0 4px;
 			background-color: $brand-danger;
 			opacity:0;
+			transition: all .3s ease-in-out;
 			
 			&:before{
 
@@ -711,6 +718,15 @@ body{
 				display: inline-block; //added
 				vertical-align: top; //added
 				@include margin-horizontal(-4px,0); //added
+				transition: all .3s ease-in-out;
+				
+				&:hover,
+				&:focus{
+
+					background-color: lighten($brand-bull,10%);
+
+				}
+
 			}
 			
 			span{
@@ -781,18 +797,47 @@ body{
 			font-size: 36px;
 			text-align: center;
 			@include padding-vertical(18px, 19px);
+			
+			
 		}
 
 		&-facebook{
+
 			background-color: $brand-floor;
+			transition: all .3s ease-in-out;
+			
+			&:hover,
+			&:focus{
+
+				background-color: lighten($brand-floor,10%);
+
+			}
 		}
 
 		&-heart{
+
 			background-color: $brand-dram;
+			transition: all .3s ease-in-out;
+			
+			&:hover,
+			&:focus{
+				
+				background-color: lighten($brand-dram,10%);
+
+			}
 		}
 
 		&-mail{
+
 			background-color: $brand-good;
+			transition: all .3s ease-in-out;
+			
+			&:hover,
+			&:focus{
+				
+				background-color: lighten($brand-good,10%);
+
+			}
 		}
 	}
 
@@ -890,6 +935,21 @@ body{
 			display: block;
 			
 		}
+
+		&__img{
+
+			&-santa{
+
+				width: 700px;
+			    left: -130px;
+    			top: -1200px;			  	    			    
+			}
+			
+			&-merry-xmas{
+
+				width: 700px;
+			}
+		}
 	}
 
 	.popup{
@@ -976,6 +1036,23 @@ body{
 	    		right: 595px;
 			}
 		}
+
+		&__img{
+
+			&-santa{
+
+				
+			    left: 30px;
+    						  	    			    
+			}
+			
+			&-merry-xmas{
+
+				width: 900px;
+			}
+		}
+
+
 	}
 
 	.popup{
@@ -1144,6 +1221,23 @@ body{
 			width: 34%;
 			@include margin-horizontal(0, 60px);
 		}
+
+		&__img{
+
+			&-santa{
+
+				top: -500px;
+			    
+			    left: -140px;
+			}
+			
+			&-merry-xmas{
+
+				width: 1000px;
+			}
+		}
+
+		
 	}
 
 	.popup{
